# weather-trends

./: .dockerignore  .gitignore  .gitlab-ci.yml  AGENTS.md  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  run_weather_trends.bat  run_weather_trends.sh  weather_trend.py
.agents/skills/data-driven-check/: SKILL.md
.agents/skills/phase-awareness/: SKILL.md
.agents/skills/validation-protocol/: SKILL.md
.codex/: hooks.json
.codex/commands/: pre-commit.md  review.md  scaffold.md  validate.md
.github/workflows/: ci.yml
docs/: WEATHER_TRENDS_MASTER_PLAN.md  status.md  versions.md
src/: __init__.py  config.py  fetcher.py  mock_data.py
src/models/: __init__.py  daily_temperature_record.py  location.py  trend_result.py  yearly_anomaly.py
tests/: __init__.py  test_config.py  test_fetcher.py  test_mock_data.py  test_models.py
